Fix filter component overflow

--- a/nexaas-app/app/assets/scss/components/_filters.scss
+++ b/nexaas-app/app/assets/scss/components/_filters.scss
@@ -15,6 +15,7 @@
     margin-left: auto;
     background-color: #fff;
     overflow-y: auto;
+    overflow-x: hidden;
     transform: translate(100%);
     transition: all .3s;
 
@@ -22,6 +23,10 @@
       transform: translate(0);
       transition: all .3s;
     }
+  }
+
+  &-container {
+    padding-bottom: 50px;
   }
 
   &-header {
