--- a/nexaas-app/app/assets/scss/components/_slider.scss
+++ b/nexaas-app/app/assets/scss/components/_slider.scss
@@ -124,7 +124,7 @@
   cursor: not-allowed;
 }
 
-.slider {
+.slider-container {
   margin: 0 5px;
 }
 
